<resources>
    <string name="app_name">PupilASMD</string>
    <string name="home">主页</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="test">练习</string>
    <string name="analysis">分析</string>
    <string name="operator">运算法则</string>
    <string name="opt_add">+</string>
    <string name="opt_sub">-</string>
    <string name="opt_divide">÷</string>
    <string name="opt_multi">×</string>
    <string name="num_len">数字位数</string>
    <string name="two">2</string>
    <string name="equals">=</string>
</resources>
