<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".ui.fragment.HomeNavFragment">
    <LinearLayout
        android:id="@+id/nav_title"
        android:orientation="horizontal"
        android:layout_marginTop="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginStart="16dp"
            app:srcCompat="@mipmap/ic_launcher"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginStart="16dp"
            android:layout_gravity="center_vertical"
            android:text="@string/app_name" />
    </LinearLayout>

    <View
        android:id="@+id/deliver0"
        android:layout_marginTop="16dp"
        android:layout_below="@id/nav_title"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray" />

    <RadioGroup
        android:layout_below="@id/deliver0"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/sheet_test"
            android:text="@string/test"
            android:checked="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/sheet_analysis"
            android:layout_marginTop="16dp"
            android:text="@string/analysis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </RadioGroup>
</RelativeLayout>